--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
     "apps/*"
   ],
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "prisma": "^6.5.0",
     "turbo": "^2.4.4"
   },
-  "packageManager": "npm@8.5.0"
+  "packageManager": "npm@8.5.0",
+  "dependencies": {
+    "@nestjs/jwt": "^11.0.0",
+    "@prisma/client": "^6.5.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1"
+  }
 }
