--- a/package.json
+++ b/package.json
@@ -6,33 +6,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "turbo dev",
     "build": "turbo build",
-    "start": "node apps/server/dist/main.js"
+    "start": "node apps/server/dist/main.js",
+    "generate": "cd apps/server && npx prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
-    "prisma": "^6.5.0",
     "turbo": "^2.4.4"
   },
-  "packageManager": "npm@8.5.0",
-  "dependencies": {
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/jwt": "^11.0.0",
-    "@nestjs/passport": "^11.0.5",
-    "@prisma/client": "^6.5.0",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
-  }
+  "packageManager": "npm@8.5.0"
 }
