updates on packages(scripts)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "start": "node apps/server/dist/main.js",
-    "generate": "cd apps/server && npx prisma generate"
+    "generate": "cd apps/server && npx prisma generate",
+    "pull": "dotenv -e .env -- cd apps/server && npx prisma db pull --schema=apps/server/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "dotenv-cli": "^8.0.0",
     "turbo": "^2.4.4"
   },
   "packageManager": "npm@8.5.0"
